CRH-LMS-FINAL-DEPLOY/CRH-VPS-DEPLOY/LMS-K8S/K8S-2ND/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: lms-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: technozen2024/crh-lms-project:lms-client-container  # Replace with exact image name
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "1"
            memory: "256Mi"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhub-secret
