CRH-LMS-FINAL-DEPLOY/CRH-VPS-DEPLOY/LMS-K8S/K8S-2ND/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: lms-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: technozen2024/crh-lms-project:lms-server-container  # Replace with exact image name
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: dockerhub-secret
