CRH-LMS-FINAL-DEPLOY/CRH-VPS-DEPLOY/LMS-K8S/K8S-2ND/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: lms-system
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 80
  selector:
    app: client
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: lms-system
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: server
---
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: lms-system
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: blog
